# yarvis

./: .gitignore  APPIDEAS.md  CLAUDE.md  README.md  package.json  vite.config.ts
ai/: README.md  briefing_schema.json  briefing_schema.md  build_skill.py  daily-dashboard-SKILL.md  validate_briefing.py
docs/: api-guide.md  briefings-feature.md
specs/: 2026-04-16_about-page_plan.md  2026-04-16_briefings-viewer_plan.md  2026-04-16_pomodoro_timer_plan.md  2026-04-17_learning_plan.md  2026-04-27_dashboard-question-editor_plan.md  2026-04-27_deal-lens-and-search_plan.md  2026-04-27_markdown-viewer-overlay_plan.md  2026-04-27_today-dashboard_plan.md  2026-04-28_home-widgets-from-json_plan.md  2026-04-29_auto-refresh_plan.md  2026-04-29_dashboard-refactor_plan.md  2026-04-30_dashboard_consistency_plan.md  2026-05-01_action-checkoff_plan.md  2026-05-04_daily-dashboard-skill_plan.md  2026-05-04_things-action-button_plan.md  2026-05-05_briefing-doc-prod-reactivity_plan.md  2026-05-05_prep-popup-load-before-open_plan.md  2026-05-05_question-fingerprints_plan.md  2026-05-07_calendar-timezone-fix_plan.md  2026-05-09_fun-card-overlay_plan.md  2026-07-15_markdown-viewer-open-reveal_plan.md  2026-07-22_topic-lens_plan.md  codex_qa.md  codex_qa_rollout_checklist.md  daily-timeline-ideas.md  dashboard-ideas.md
src/: app.css  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: briefings.rs  dashboard.rs  external.rs  learning.rs  mod.rs  settings.rs  system.rs
(+92 files in other folders)
