[package]
name = "yarvis"
version = "0.6.6"
edition = "2021"
description = "Personal Knowledge Assistant"

[lib]
name = "yarvis_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "6"
chrono = "0.4"
regex = "1"
serde_yaml = "0.9"
